--- a/Style/Coloumn Layout-2.css
+++ b/Style/Coloumn Layout-2.css
@@ -2,7 +2,7 @@ body {
     background-color: rgb(250, 250, 195);
     box-sizing: border-box;
     width: 100%;
-    height: %;
+    /* height: %; */
     margin-bottom: 30%;
 
 
