--- a/Style/nb.css
+++ b/Style/nb.css
@@ -9,11 +9,13 @@ a{
 }
 .hor{
   background: darkgreen;
+  
 }
 .hor:after{
   content: '';
   clear:both;
   display: block;
+  border:rgb(248, 248, 131);,
 
 }
 .hor ul{
@@ -28,11 +30,12 @@ a{
 .hor ul li a{
   text-decoration: none;
   color: rgb(248, 248, 131);
+  
   padding: 15px 20px;
   display: block;}
-  .hor ul li:hover a{
+  /* .hor ul li:hover a{
     background-color: darkgreen;
-  }
+  } */
  
  
 
