--- a/Style/nb.css
+++ b/Style/nb.css
@@ -1,41 +1,34 @@
-body{
-  margin: 0;
-  padding: 0;
+.ver{
+  display: inline;
+  
+}
+#ver{
+  background-color: darkgreen;
+  color: lemonchiffon;
+padding: 10px;
+padding-left:20px;
+}
+il{
+  padding-left: 15px;
+}
+#hor{
+  background-color: darkgreen;
+  color: lemonchiffon;
+  display: block;
+  padding-left: 0px;
+    padding-right: 101px;    
+    margin-left: 124px;
+    margin-top: -28%;
+    padding-bottom: 10px  ;
+    
+
+  
 
 }
-a{
-  font-size: 12px;
-  text-transform: uppercase;
+#ie{
+  color: orange;
 }
 .hor{
-  background: darkgreen;
-  
+  width: 60px;
+  height: 250px;
 }
-.hor:after{
-  content: '';
-  clear:both;
-  display: block;
-  border:rgb(248, 248, 131);,
-
-}
-.hor ul{
-  list-style: none;
-  margin: 0;
-}
-.hor > ul > li{
-  float: left;
-  position: relative;
-
-}
-.hor ul li a{
-  text-decoration: none;
-  color: rgb(248, 248, 131);
-  
-  padding: 15px 20px;
-  display: block;}
-  /* .hor ul li:hover a{
-    background-color: darkgreen;
-  } */
- 
- 
-
